--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.12.1",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "animate.css": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "redux": "^4.2.1",
     "sass": "^1.62.0"
   },
