--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@reduxjs/toolkit": "^1.9.5",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
