--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "redux": "^4.2.1",
-    "sass": "^1.62.1"
+    "sass": "^1.62.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
